--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <p>We are a passionate team dedicated to delivering excellence in every project. Our mission is to help businesses grow through innovative solutions and cutting-edge technology.</p>
                         <p>With years of experience in the industry, we understand what it takes to succeed in today's digital world.</p>
                     </div>
-                    <div class="about-image">
-                        <img src="about-image.jpg" alt="About Us">
-                    </div>
+                        <div class="about-image">
+                            <img src="./img/aerial-view-business-team.jpg" alt="About Us">
+                        </div>
                 </div>
             </div>
         </section>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Company Name. All rights reserved.</p>
+            <p>&copy; 2025 Company Name. All rights reserved.</p>
         </div>
     </footer>
 
