--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Presentation</title>
+    <link rel="icon" type="image/x-icon" href="./img/download.webp">
+    <title>Voltss</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Company Logo">
+            <img src="./img/download.webp" alt="Company Logo">
         </div>
         <nav>
             <ul class="menu">
