--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>With years of experience in the industry, we understand what it takes to succeed in today's digital world.</p>
                     </div>
                         <div class="about-image">
-                            <img src="./img/aerial-view-business-team.jpg" alt="About Us">
+                            <img src="./img/depositphotos_49080337-stock-photo-about-us.webp" alt="About Us">
                         </div>
                 </div>
             </div>
